# EE3_AutonomousDrivingCar

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults.esp32s3  udp_listener.py
main/: CMakeLists.txt  barcode.c  barcode.h  encoder.c  encoder.h  main.c  main_exploration.c  main_exploration.h  motorcontrol.c  motorcontrol.h  mpu.c  mpu.h  surroundings.c  surroundings.h  track_navigation.c  track_navigation.h  ultrasonic.c  ultrasonic.h  wifi_logger.c  wifi_logger.h
main/exploration_algorithm/: direction.c  direction.h  exploration.c  exploration.h  globals.c  globals.h  navigate.c
main/exploration_algorithm/algorithm_structs_PUBLIC/: FundamentalPath.c  FundamentalPath.h  MapPoint.c  MapPoint.h
main/sensordata_logging/: ultrasonic.c
